--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - master  # Set a branch name to trigger deployment test
+      - master  # Set a branch name to trigger deployment test sss
 
 jobs:
   build:
